Add README link to index and add orientation to manifest.json

--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,7 @@
   "background_color": "#2780e3",
   "theme_color": "#2780e3",
   "display": "standalone",
+  "orientation": "portrait",
   "icons": [
     {
       "src": "favicon.ico",
