--- a/manifest.json
+++ b/manifest.json
@@ -4,17 +4,17 @@
   "background_color": "#2780e3",
   "theme_color": "#2780e3",
   "display": "standalone",
-  "orientation": "portrait",
+  "orientation": "any",
   "icons": [
     {
-      "src": "favicon.ico",
-      "type": "image/x-icon",
-      "sizes": "64x64"
-    },
-    {
-      "src": "assets/img/favicon.png",
+      "src": "assets/img/icon_192.png",
       "type": "image/png",
       "sizes": "192x192"
+    },
+    {
+      "src": "assets/img/icon_512.png",
+      "type": "image/png",
+      "sizes": "512x512"
     }
   ],
   "start_url": "index.html?launcher=true"
